--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -20,7 +21,7 @@
                 <a href="#">Sign up</a>
             </div>
             <div class="imagen">
-                <img src="" alt="">
+                <img src="./Assets/pic1.jpg" alt="">
             </div>
         </div>
     </header>
@@ -30,19 +31,19 @@
                 <h2>Some random information.</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="" alt="">
+                        <img src="./Assets/h4.jpg" alt="">
                         <p>This is some subtect under an illustration or image</p>
                     </div>
                     <div class="card">
-                        <img src="" alt="">
+                        <img src="./Assets/h3.jpg" alt="">
                         <p>This is some subtect under an illustration or image</p>
                     </div>
                     <div class="card">
-                        <img src="" alt="">
+                        <img src="./Assets/h2.jpg" alt="">
                         <p>This is some subtect under an illustration or image</p>
                     </div>
                     <div class="card">
-                        <img src="" alt="">
+                        <img src="./Assets/h1.jpg" alt="">
                         <p>This is some subtect under an illustration or image</p>
                     </div>
                 </div>
