--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +11,31 @@
 </head>
 <body>
     <header>
-        <h3>Header Logo</h3>
         <nav>
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
+            <h3>Header Logo</h3>
+            <div class="links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
         </nav>
         <div class="banner">
-            <div class="content">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtect thas goes here under the main title. Its a smaller font and the color is lower contrast</p>
-                <a href="#">Sign up</a>
-            </div>
-            <div class="imagen">
-                <img src="./Assets/pic1.jpg" alt="">
+            <div class="banner1">
+                <div class="content">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtect thas goes here under the main title. Its a smaller font and the color is lower contrast</p>
+                    <a href="#">Sign up</a>
+                </div>
+                <div class="img-banner">
+                    <img src="./Assets/pic1.jpg" alt="">
+                </div>
             </div>
         </div>
     </header>
     <main>
         <div class="sect-container">
             <section class="sect s1">
-                <h2>Some random information.</h2>
+                <h1>Some random information.</h1>
                 <div class="cards-container">
                     <div class="card">
                         <img src="./Assets/h4.jpg" alt="">
